# db-examples

./: .gitignore  .pdm-python  README.md  justfile  pyproject.toml
notebooks/: agl-electricity-usage-duckdb.ipynb  agl-electricity-usage.ipynb  nsw-open-data.ipynb  world-conflict.ipynb
