[project]
name = "db-examples"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Michael Booth", email = "michael@databooth.com.au"},
]
dependencies = [
    "notebook>=7.1.2",
    "bs4>=0.0.2",
    "pandas>=2.2.1",
    "lxml>=5.1.0",
    "itables>=2.0.0",
    "plotly>=5.20.0",
    "scrapy>=2.11.1",
    "duckdb>=0.10.1",
    "folium>=0.16.0",
    "httpx>=0.27.0",
    "tomli>=2.0.1",
    "Pillow>=10.2.0",
    "loguru>=0.7.2",
    "selenium>=4.18.1",
    "cachetools>=5.3.3",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "DataBooth"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
lint = [
    "black[jupyter]>=24.3.0",
]
