[project]
name = "db-examples"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Michael Booth", email = "michael@databooth.com.au"},
]
dependencies = [
    "notebook>=7.1.2",
    "bs4>=0.0.2",
    "pandas>=2.2.1",
    "lxml>=5.1.0",
    "itables>=2.0.0",
    "plotly>=5.21.0",
    "scrapy>=2.11.1",
    "duckdb>=0.10.1",
    "folium>=0.16.0",
    "httpx>=0.27.0",
    "tomli>=2.0.1",
    "Pillow>=10.2.0",
    "loguru>=0.7.2",
    "selenium>=4.20.0",
    "cachetools>=5.3.3",
    "ydata-profiling>=4.7.0",
    "ipywidgets>=8.1.2",
    "geopandas>=0.14.3",
    "pyogrio>=0.7.2",
    "arcgis>=2.0.0",
    "openpyxl>=3.1.2",
]
requires-python = "<3.12,>3.10"
readme = "README.md"
license = {text = "DataBooth"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
lint = [
    "black[jupyter]>=24.3.0",
]
